Update service layer using newly implemented mapper classes